--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@
           </svg>
     </div>
     <div class="content">
-        <h1 class="main-content">"If you really want to learn UI/UX, check out DesignCourse"</h1>
+        <h1 class="main-content">"Convert your UI/UX designs to workable code in HTML/CSS"</h1>
         <div class="quote-container main-content">
             <div class="avatar"></div>
-            <p>Trad Braversy</p>
+            <p>Charlis Doley</p>
         </div>
-        <a href="#" class="cta main-content">Start Learning</a>
+        <a href="#" class="cta main-content">Convert now</a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
     <script>
